toggle z-index bug fix

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -154,16 +154,10 @@ img {
   font-weight: 700;
 }
 
-.toggle {
-  margin: 20px;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
 .toggle-container {
   display: flex;
   align-items: center;
+  z-index: 1;
 }
 
 .toggle-text {
@@ -186,6 +180,7 @@ img {
   .toggle {
     position: relative;
     margin: 0px 50px 0px 40px;
+    z-index: 1;
   }
 }
 
@@ -200,13 +195,18 @@ img {
   .divider {
     visibility: hidden;
   }
+
   .toggle {
-    margin: 10px 50px;
+    margin: 10px 40px;
     position: absolute;
     right: 0;
     top: 0;
   }
 
+  .toggle-container {
+    display: flex;
+    align-items: center;
+  }
 }
 
 /* laptop + */
@@ -220,6 +220,18 @@ img {
   .divider {
     visibility: hidden;
   }
+  // .toggle {
+  //   margin: 20px;
+  //   position: absolute;
+  //   right: 0;
+  //   top: 0;
+  // }
+
+  // .toggle-container {
+  //   display: flex;
+  //   align-items: center;
+  //   margin-right: 30px;
+  // }
 }
 
 .attribution {
